--- a/doc.html
+++ b/doc.html
@@ -1,13 +1,14 @@
 <html>
 <head>
      <title>Prezentare</title>
+    
 </head>
 
 <body>
-       <h1>Nume: Mathe</h1>
-       <h2>Prenume:Arnold</h2>
+       <h1 class="black text">Nume: Mathe</h1>
+       <h2 class="black text">Prenume:Arnold</h2>
        <h3>Email: arnimathe@gmail.com</h3>
-       <h4> poza: <img src "poza.jpg" width="90" height="100"> </h4>
+       <h4> poza: <img src Destop\html width="90" height="100"> </h4>
        <h5> asteptari legate de educatie: </h5>
 <table>
 <thead>
@@ -23,6 +24,32 @@
           <td> 1     </td>
           <td> <a href="https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/06.pdf" >Ia</a>
       </tr>
+      <tr> 
+          <td> Componente si circuite pasive </td>
+          <td>1</td>
+          <td> <a
+href="https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/05a.pdf">  Ccp</a>  </td>
+ </tr>
+        <tr> 
+           <td> Circuite lectonice fundamentale </td>
+           <td>2</td>
+           <td><a
+href="https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/20a.pdf">Cef</a> </td>
+</tr>
+<tr>
+  <td>Electronica de putere</td>
+  <td> 3</td>
+<td><a
+href="https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/36.pdf">Edp</a>
+</td>
+</tr>
+<tr>
+<td> Bazele electrotehnicii II </td>
+<td> 2</td>
+<td><a
+href="https://etti.utcluj.ro/files/Acasa/Site/FiseDisciplina/EaRo/16.pdf">Be2</a>
+</td>
+</tr>
 </tbody>
 </table>
 <p>hobby-uri: </p>
